# sc-emulator

./: .clang-format  .clang-tidy  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pydocstyle.ini  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  doxyfile  project.yml  requirements.txt  sc-emulator.code-workspace  we.sh
.github/workflows/: build.yml  unit-test.yml
baldwin/: README.md  setup.py
baldwin/baldwin/: iso_7816.py  target.py
baldwin/src/: target.py
client/: README.md  project.yml
client/src/: client.py  iso_7816.py  main.c  main.py  target.py  tcp_client.c  tcp_client.h
docs/: .gitignore  book.toml  doxyfile
docs/src/: SUMMARY.md  ceedling.md  ceedling_documentation.md  personalization.md  testing.md  unity.md  unity_assertions_reference.md
scripts/: build.sh  lint.sh  run-clang-tidy.py
src/: Main.cpp  main.c
src/Core/: Core.h  Log.cpp  Log.h  Platform.cpp  Platform.h  Product.cpp  Product.h  Project.h  Result.h  Types.h  card_life_cycle.c  card_life_cycle.h  checkpoint.c  checkpoint.h  command_processor.c  command_processor.h
src/Cryptography/: CRC16.cpp  CRC16.h
src/Memory/: MMU.cpp  MMU.h
src/Protocol/: Atr.cpp  Atr.h  Protocol.cpp  Protocol.h  StatusWords.h  TcpIpServer.cpp  TcpIpServer.h
src/core/: checkpoint.h  command_processor.c  core.h  logger.c  platform.c  platform.h  project.h  section.h  types.h
src/cryptography/: crc16.c  crc16.h
src/device/: device.h  platform.h
src/hal/: hal.h  x86_io.c
src/mmu/: mmu.c  mmu.h
src/protocol/: atr.c  atr.h  protocol.c  protocol.h  t0.c  (+5 more)
test/: .clang-format
(+7 files in other folders)
